Refactor code and add swagger integration to code